--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="offcanvas-body">
               <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                 <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">About</a></li>
+                <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">Projects</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">Blog</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
@@ -148,30 +148,34 @@
         <div class="projectsContainer d-flex flex-column align-items-center">
         <div class="post-c d-flex justify-content-center">
             <div class="post-1">
-            <img src="bakery page.png" />
+            <img src="LogosSphere.png" alt="dictionary page"/>
+            <a href="https://logos-sphere.vercel.app/">
             <div class="post-t1">
-              <h4>Bakery <br>Page</h4>
+              <h4>Logos <br>Sphere</h4>
              </div>
+            </a>
            </div>
            <div class="post-2">
-            <img src="developer page.png" />
+            <img src="workInProgress.png" />
             <div class="post-t2">
-              <h4>Developer<br>Page</h4>
+              <h4>Work In<br>Progress</h4>
              </div>
            </div>
           </div>
           <div class="post-c-1 d-flex justify-content-center">
            <div class="post-3">
-            <img src="shoe-page.png" />
+            <img src="workInProgress.png" />
             <div class="post-t3">
-              <h4>Shoe<br>Page</h4>
+              <h4>Work In<br>Progress</h4>
              </div>
            </div>
            <div class="post-4">
             <img src="google landing page image.png" />
+            <a href="https://kev-bb.github.io/Google-Landing-Page/">
             <div class="post-t4">
               <h4>Landing<br>Page</h4>
              </div>
+            </a>
            </div>
           </div>
         </div>
@@ -261,7 +265,7 @@
               message as soon as possible. Thank you for your interest in
               connecting!
             </p>
-            <button class="btn btn-primary">Contact Me</button>
+            <a href="https://www.linkedin.com/in/kevin-birkan-beyer-778704144/"><button class="btn btn-primary">Contact Me</button></a>
           </div>
         </div>
       </section>
@@ -270,9 +274,17 @@
     <footer
       class="d-flex flex-column justify-content-center align-items-center"
     >
+    <div class="d-flex justify-content-between gap-3">
       <a href="https://www.linkedin.com/in/kevin-birkan-beyer-778704144/"
         ><i class="bi bi-linkedin"></i
       ></a>
+      <a href="https://github.com/Kev-BB">
+        <i class="bi bi-github"></i>
+      </a>
+      <a href="https://medium.com/@Kev-BB">
+        <i class="bi bi-medium"></i>
+      </a>
+    </div>
       <p>&copy; 2023 Kevin Birkan Beyer. All Rights Reserved</p>
     </footer>
     <script src="script.js"></script>
